css/style.css
/* ... */
.sqs-block-content span{
    font-family: "Courier New", "Courier", "monospace";
    font-size: 14px;
    line-height: 1.6em;
    letter-spacing: 0px;
    font-weight: normal;
    font-style: normal;
    color:#B38845;
}
.sqs-block-content hr{
    font-size: 14px;
    font-weight: normal;
    font-style: normal;
    color:#B38845;
    margin-left:45%
}
.sqs-block-content h1{
    color:#B38845;
    margin-bottom: 18px;
    margin-left: 13px;
}
.sqs-block-content p {
    text-align:right;
    font-weight: bold !important;
}


.back-to-top-link a{
    background:url('../img/top-arrow.png') no-repeat;
    display: block;
    z-index: 10;
    width: 81px;
    height: 50px;
    margin-left: 47.25%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border-radius: 50%;
    position: absolute;
    margin-top: -34px !important;
    padding-top: 2px;   
}

.scroll-me {
    background:url('../img/scroll-arrow.png') no-repeat;
    display: block;
    z-index: 10;
    width: 81px;
    height: 50px;
    margin-left: 47.25%;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border-radius: 50%;
    position: absolute;
    margin-top: -32px !important;
    padding-top: 2px;   
}
.lodge-
.lodge-icons {
    left: 83%;
    z-index: 100 !important;
    position: absolute;
}
.section-separator
{
    width:95%;
    margin-bottom: 40px;
    margin-left:7%;
}
.section-separator-fishing
{
    width:95%;
    margin-left:7%;
}
.lodge-sect{
    margin-bottom:30px;
    margin-left:5%;
}
.text-primary
{
    font-size:18px !important;	
}

